fix some broken layout

--- a/packages/app/src/pages/Sandbox/styles.css
+++ b/packages/app/src/pages/Sandbox/styles.css
@@ -5,6 +5,7 @@ main.editor-content {
   background-color: rgb(45, 42, 46);
   /*color: var(--white);*/
   /* color: rgb(36, 36, 36); */
+  height: calc(100vh - 48px);
 }
 
 .app {
